--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -14,8 +14,9 @@ body {
   padding: 0;
   margin: 0;
   border: 0;
-  width: 100vw;
   height: 100vh;
+  width: min(980px, 90vw);
+  margin: auto;
   justify-content: center;
   align-items: center;
   .card {
@@ -38,16 +39,26 @@ body {
       font-size: 2rem;
       font-weight: bolder;
     }
+    .card__person-info--number-green {
+      color: #00ff00;
+    }
     .card__button {
       height: 100px;
-      width: 100px;
+      width: 100x;
       position: relative;
       bottom: 35%;
       left: 50%;
-      font-size: 2rem;
+      font-size: 3rem;
       font-weight: bolder;
       color: white;
       border: none;
+    }
+    @media only screen and (min-width: 768px) {
+      .card__button {
+        height: 100px;
+        width: 100px;
+        font-size: 2rem;
+      }
     }
   }
 }
